tests/parser/bad/type_t-cid-map-with.scilla
scilla_version 0

library TestLib
(* swamp is an incorrect map value type *)
let f = fun (x: Option Map swamp )
let m = True

contract Test
()
